--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,16 @@ img.a {
   vertical-align: text-bottom;
 }
 
+.container{
+    max-width: 90%;
+    margin: 30px auto;
+    overflow: auto;
+    min-height: 300px;
+    border: 1px solid steelblue;
+    padding: 30px;
+    border-radius: 5px;
+}
+
 h1 {
   color: white;
   font-family: monospace;
