--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,8 @@ img.a {
     border: 1px solid steelblue;
     padding: 30px;
     border-radius: 5px;
+    background-color: #383d49;
+
 }
 
 h1 {
