--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,22 @@ h1 {
   	justify-content: center
 }
 
+.notice {
+	background-color: darkred;
+	color: white;
+	font-size: 1rem;
+	border: #000 solid 1px;
+	padding: 5px;
+}
+
+a:link {
+	text-decoration: underline;
+  }
+
+  a:hover {
+	color: grey;
+  }
+
 #search-field {
 	width: calc(80% - 10px);
 	border: none;
